...
        control.currentPageIndicatorTintColor = Constants.Colors.primary
        control.pageIndicatorTintColor = Constants.Colors.lightGray
        control.translatesAutoresizingMaskIntoConstraints = false
        return control
    }()

    private lazy var nextButton = UIButton.primaryButton(title: "Next")
    private lazy var skipButton = UIButton.secondaryButton(title: "Skip")

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = Constants.Colors.background
        if let sheet = sheetPresentationController {
...
